# ediptft

./: CMakeLists.txt  README.rst
include/: eatft.h  eatft_avr.h
src/: avr.c  button.c  eatft.c  private.h  protocol.c  switch.c  unix.c  widgets.c
test/: test.c  test.h  test_unix.c
